--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>もれちっちのグッズキャッチ！</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="start-screen" class="screen">
-        <h1>もれちっちのグッズキャッチ！</h1>
+      <h1>
+        <span class="rainbow-text">もれちっちの</span><br>
+        <span class="rainbow-text">グッズキャッチ！</span>
+      </h1>
+      
         <img src="img/motech_banner.jpeg" alt="もれちっちバナー" class="start-image" />
       
         <ul class="item-explanation">
@@ -71,3 +77,4 @@
  
   
   
+
