--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <div id="start-screen" class="screen">
-      <h1>
-        <span class="rainbow-text">もれちっちの</span><br>
-        <span class="rainbow-text">グッズキャッチ！</span>
-      </h1>
+      <h1 class="rainbow-text">もれちっちのグッズキャッチ！</h1>
+
       
         <img src="img/motech_banner.jpeg" alt="もれちっちバナー" class="start-image" />
       
@@ -77,4 +75,3 @@
  
   
   
-
